--- a/index.html
+++ b/index.html
@@ -36,7 +36,27 @@
                 <img src="./img/line.png" alt="">
             </a>
         </div>
+        <img class="menu" src="./img/menu.png" alt="">
     </nav>
+
+    <!-- 手機版選單 -->
+    <div class="mb-menu">
+        <img class="error" src="img/error.png" alt="">
+        <div class="menu-box">
+            <a href="">
+                <img src="./img/fb.png" alt="">
+                <span>FaceBook</span>
+            </a>
+            <a href="">
+                <img src="./img/line.png" alt="">
+                <span>Line</span>
+            </a>
+            <a href="">
+                <img src="./img/github.png" alt="">
+                <span>GitHub</span>
+            </a>
+        </div>
+    </div>
 
     <!-- 輪播 -->
     <div class="slick">
@@ -112,7 +132,9 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- 連結自己的外部js -->
     <script src="./all.js"></script>
+
     <script>
         // 啟動AOS
         AOS.init();
